[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Maps.gd" type="Script" id=1]
[ext_resource path="res://Assets/IMGs/Ground.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Spikes.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Power_Item_Collectible.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Exit.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 511.294, 93.7549 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.175, 31.7074 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72.6491, 400.923 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 890.105, -0.684182 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.7625, 544.404 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 954.652, 17.9146 )

[node name="Map1" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" type="Node2D" parent="."]
position = Vector2( 740, 0 )

[node name="GroundTex" type="TextureRect" parent="Ground"]
margin_left = 1.0
margin_top = 869.0
margin_right = 1025.0
margin_bottom = 1079.0
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Ground/GroundTex"]
position = Vector2( 330, 117 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/GroundTex/StaticBody2D"]
position = Vector2( 178, -1 )
shape = SubResource( 1 )

[node name="GroundTex5" type="TextureRect" parent="Ground"]
margin_left = -949.0
margin_top = 869.0
margin_right = 75.0
margin_bottom = 1079.0
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Ground/GroundTex5"]
position = Vector2( 330, 117 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/GroundTex5/StaticBody2D"]
position = Vector2( 178, -1 )
shape = SubResource( 1 )

[node name="GroundTex2" type="TextureRect" parent="Ground"]
margin_left = 1471.0
margin_top = 869.0
margin_right = 2495.0
margin_bottom = 1079.0
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Ground/GroundTex2"]
position = Vector2( 330, 117 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/GroundTex2/StaticBody2D"]
position = Vector2( 178, -1 )
shape = SubResource( 1 )

[node name="GroundTex4" type="TextureRect" parent="Ground"]
margin_left = 3431.0
margin_top = 869.0
margin_right = 4455.0
margin_bottom = 1079.0
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Ground/GroundTex4"]
position = Vector2( 330, 117 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/GroundTex4/StaticBody2D"]
position = Vector2( 178, -1 )
shape = SubResource( 1 )

[node name="GroundTex3" type="TextureRect" parent="Ground"]
margin_left = 2739.0
margin_top = 869.0
margin_right = 3763.0
margin_bottom = 1079.0
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Ground/GroundTex3"]
position = Vector2( 330, 117 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/GroundTex3/StaticBody2D"]
position = Vector2( 178, -1 )
shape = SubResource( 1 )

[node name="Pits" type="Node2D" parent="Ground"]

[node name="Spikes" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 1083.1, 1079.2 )
rotation = -1.5708

[node name="Spikes2" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 1220.1, 1079.2 )
rotation = -1.5708

[node name="Spikes3" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 1496.1, 892.202 )
rotation = -1.5708

[node name="Spikes7" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 2213.1, 892.202 )
rotation = -1.5708

[node name="Spikes15" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 3863.1, 892.202 )
rotation = -1.5708

[node name="Spikes4" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 1639.1, 892.202 )
rotation = -1.5708

[node name="Spikes8" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 2356.1, 892.202 )
rotation = -1.5708

[node name="Spikes17" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 4006.1, 892.202 )
rotation = -1.5708

[node name="Spikes5" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 1782.1, 892.202 )
rotation = -1.5708

[node name="Spikes13" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 3432.1, 892.202 )
rotation = -1.5708

[node name="Spikes18" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 3715.1, 892.202 )
rotation = -1.5708

[node name="Spikes19" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 4294.1, 892.202 )
rotation = -1.5708

[node name="Spikes9" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 2499.1, 892.202 )
rotation = -1.5708

[node name="Spikes11" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 2499.1, 892.202 )
rotation = -1.5708

[node name="Spikes14" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 4149.1, 892.202 )
rotation = -1.5708

[node name="Spikes6" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 1925.1, 892.202 )
rotation = -1.5708

[node name="Spikes12" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 1925.1, 892.202 )
rotation = -1.5708

[node name="Spikes16" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 3575.1, 892.202 )
rotation = -1.5708

[node name="Spikes10" parent="Ground/Pits" instance=ExtResource( 3 )]
position = Vector2( 2642.1, 892.202 )
rotation = -1.5708

[node name="Obstacles" type="Node2D" parent="."]
position = Vector2( 740, 0 )

[node name="Box" type="TextureRect" parent="Obstacles"]
margin_left = 600.808
margin_top = 624.377
margin_right = 664.808
margin_bottom = 688.377
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box/StaticBody2D"]
position = Vector2( 31.5, 31.5 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Box3" type="TextureRect" parent="Obstacles"]
margin_left = 1603.99
margin_top = 604.097
margin_right = 1667.99
margin_bottom = 668.097
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box3/StaticBody2D"]
position = Vector2( 31.5, 31.5 )
shape = SubResource( 2 )

[node name="Box4" type="TextureRect" parent="Obstacles"]
margin_left = 3421.42
margin_top = 307.374
margin_right = 3485.42
margin_bottom = 371.374
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box4/StaticBody2D"]
position = Vector2( 31.5, 31.5 )
shape = SubResource( 2 )

[node name="Box5" type="TextureRect" parent="Obstacles"]
margin_left = 4578.48
margin_top = 672.141
margin_right = 4642.48
margin_bottom = 736.141
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box5/StaticBody2D"]
position = Vector2( 33.8293, 31.5 )
shape = SubResource( 2 )

[node name="Box6" type="TextureRect" parent="Obstacles"]
margin_left = 5078.0
margin_top = 672.141
margin_right = 5142.0
margin_bottom = 736.141
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box6/StaticBody2D"]
position = Vector2( 33.8293, 31.5 )
shape = SubResource( 2 )

[node name="Box8" type="TextureRect" parent="Obstacles"]
margin_left = 5722.38
margin_top = 306.716
margin_right = 5786.38
margin_bottom = 370.716
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box8/StaticBody2D"]
position = Vector2( 33.8293, 31.5 )
shape = SubResource( 2 )

[node name="Box7" type="TextureRect" parent="Obstacles"]
margin_left = 5716.9
margin_top = 674.299
margin_right = 5780.9
margin_bottom = 738.299
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box7/StaticBody2D"]
position = Vector2( 33.8293, 31.5 )
shape = SubResource( 2 )

[node name="Box2" type="TextureRect" parent="Obstacles"]
margin_left = 182.851
margin_top = 304.293
margin_right = 246.851
margin_bottom = 368.293
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Box2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Box2/StaticBody2D"]
position = Vector2( 31.5, 31.5 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Obstacles"]
margin_left = 311.627
margin_top = 503.311
margin_right = 456.627
margin_bottom = 1300.31
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect/StaticBody2D"]
position = Vector2( 61, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes" parent="Obstacles/ColorRect" instance=ExtResource( 3 )]
position = Vector2( 0.877808, 1.00424 )
rotation = -1.5708

[node name="ColorRect2" type="ColorRect" parent="Obstacles"]
margin_left = 939.73
margin_top = 582.909
margin_right = 1084.73
margin_bottom = 1379.91
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect2"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect2/StaticBody2D"]
position = Vector2( 60, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes2" parent="Obstacles/ColorRect2" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 2.40625 )
rotation = -1.5708

[node name="Spikes3" parent="Obstacles/ColorRect2" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 152.406 )
rotation = -3.14159

[node name="Spikes5" parent="Obstacles/ColorRect2" instance=ExtResource( 3 )]
position = Vector2( 143.775, 158.406 )

[node name="Spikes7" parent="Obstacles/ColorRect2" instance=ExtResource( 3 )]
position = Vector2( 143.775, 300.406 )

[node name="Spikes6" parent="Obstacles/ColorRect2" instance=ExtResource( 3 )]
position = Vector2( 143.775, 8.40601 )

[node name="Spikes4" parent="Obstacles/ColorRect2" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 302.406 )
rotation = -3.14159

[node name="ColorRect5" type="ColorRect" parent="Obstacles"]
margin_left = 2062.13
margin_top = 416.854
margin_right = 2207.13
margin_bottom = 1213.86
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect5"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect5/StaticBody2D"]
position = Vector2( 60, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes2" parent="Obstacles/ColorRect5" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 2.40625 )
rotation = -1.5708

[node name="Spikes3" parent="Obstacles/ColorRect5" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 152.406 )
rotation = -3.14159

[node name="Spikes5" parent="Obstacles/ColorRect5" instance=ExtResource( 3 )]
position = Vector2( 143.775, 158.406 )

[node name="Spikes7" parent="Obstacles/ColorRect5" instance=ExtResource( 3 )]
position = Vector2( 143.775, 300.406 )

[node name="Spikes6" parent="Obstacles/ColorRect5" instance=ExtResource( 3 )]
position = Vector2( 143.775, 8.40601 )

[node name="Spikes4" parent="Obstacles/ColorRect5" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 302.406 )
rotation = -3.14159

[node name="ColorRect6" type="ColorRect" parent="Obstacles"]
margin_left = 2658.03
margin_top = 667.237
margin_right = 2803.03
margin_bottom = 1464.24
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect6"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect6/StaticBody2D"]
position = Vector2( 60, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes2" parent="Obstacles/ColorRect6" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 2.40625 )
rotation = -1.5708

[node name="Spikes3" parent="Obstacles/ColorRect6" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 152.406 )
rotation = -3.14159

[node name="Spikes5" parent="Obstacles/ColorRect6" instance=ExtResource( 3 )]
position = Vector2( 143.775, 158.406 )

[node name="Spikes7" parent="Obstacles/ColorRect6" instance=ExtResource( 3 )]
position = Vector2( 143.775, 300.406 )

[node name="Spikes6" parent="Obstacles/ColorRect6" instance=ExtResource( 3 )]
position = Vector2( 143.775, 8.40601 )

[node name="Spikes4" parent="Obstacles/ColorRect6" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 302.406 )
rotation = -3.14159

[node name="ColorRect7" type="ColorRect" parent="Obstacles"]
margin_left = 3914.53
margin_top = 548.174
margin_right = 4059.53
margin_bottom = 1345.18
rect_pivot_offset = Vector2( 1165.47, -288.174 )
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect7"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect7/StaticBody2D"]
position = Vector2( 60, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes2" parent="Obstacles/ColorRect7" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 2.40625 )
rotation = -1.5708

[node name="Spikes3" parent="Obstacles/ColorRect7" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 152.406 )
rotation = -3.14159

[node name="Spikes5" parent="Obstacles/ColorRect7" instance=ExtResource( 3 )]
position = Vector2( 143.775, 158.406 )

[node name="Spikes7" parent="Obstacles/ColorRect7" instance=ExtResource( 3 )]
position = Vector2( 143.775, 300.406 )

[node name="Spikes6" parent="Obstacles/ColorRect7" instance=ExtResource( 3 )]
position = Vector2( 143.775, 8.40601 )

[node name="Spikes4" parent="Obstacles/ColorRect7" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 302.406 )
rotation = -3.14159

[node name="ColorRect10" type="ColorRect" parent="Obstacles"]
margin_left = 4824.53
margin_top = 458.174
margin_right = 4969.53
margin_bottom = 1255.18
rect_pivot_offset = Vector2( 1165.47, -288.174 )
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect10"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect10/StaticBody2D"]
position = Vector2( 60, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes2" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 2.40625 )
rotation = -1.5708

[node name="Spikes3" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 152.406 )
rotation = -3.14159

[node name="Spikes5" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( 143.775, 158.406 )

[node name="Spikes7" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( 143.775, 300.406 )

[node name="Spikes10" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( 143.775, 458.406 )

[node name="Spikes6" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( 143.775, 8.40601 )

[node name="Spikes4" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 302.406 )
rotation = -3.14159

[node name="Spikes8" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( -0.225586, 452.406 )
rotation = -3.14159

[node name="Spikes9" parent="Obstacles/ColorRect10" instance=ExtResource( 3 )]
position = Vector2( -0.225586, 601.406 )
rotation = -3.14159

[node name="ColorRect8" type="ColorRect" parent="Obstacles"]
margin_left = 6104.87
margin_top = 256.624
margin_right = 6249.87
margin_bottom = 1053.63
rect_rotation = 180.0
rect_pivot_offset = Vector2( -1024.87, 3.3761 )
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect8"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect8/StaticBody2D"]
position = Vector2( 60, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes2" parent="Obstacles/ColorRect8" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 2.40625 )
rotation = -1.5708

[node name="Spikes3" parent="Obstacles/ColorRect8" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 152.406 )
rotation = -3.14159

[node name="Spikes5" parent="Obstacles/ColorRect8" instance=ExtResource( 3 )]
position = Vector2( 143.775, 158.406 )

[node name="Spikes7" parent="Obstacles/ColorRect8" instance=ExtResource( 3 )]
position = Vector2( 143.775, 300.406 )

[node name="Spikes6" parent="Obstacles/ColorRect8" instance=ExtResource( 3 )]
position = Vector2( 143.775, 8.40601 )

[node name="Spikes4" parent="Obstacles/ColorRect8" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 302.406 )
rotation = -3.14159

[node name="ColorRect9" type="ColorRect" parent="Obstacles"]
margin_left = 7014.87
margin_top = 306.624
margin_right = 7159.87
margin_bottom = 1103.63
rect_rotation = 180.0
rect_pivot_offset = Vector2( -1024.87, 3.3761 )
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect9"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect9/StaticBody2D"]
position = Vector2( 60, -277 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes2" parent="Obstacles/ColorRect9" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 2.40625 )
rotation = -1.5708

[node name="Spikes3" parent="Obstacles/ColorRect9" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 152.406 )
rotation = -3.14159

[node name="Spikes5" parent="Obstacles/ColorRect9" instance=ExtResource( 3 )]
position = Vector2( 143.775, 158.406 )

[node name="Spikes7" parent="Obstacles/ColorRect9" instance=ExtResource( 3 )]
position = Vector2( 143.775, 300.406 )

[node name="Spikes6" parent="Obstacles/ColorRect9" instance=ExtResource( 3 )]
position = Vector2( 143.775, 8.40601 )

[node name="Spikes4" parent="Obstacles/ColorRect9" instance=ExtResource( 3 )]
position = Vector2( -0.225098, 302.406 )
rotation = -3.14159

[node name="ColorRect4" type="ColorRect" parent="Obstacles"]
margin_left = 1351.43
margin_top = 504.106
margin_right = 1496.43
margin_bottom = 1301.11
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect4"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect4/StaticBody2D"]
position = Vector2( 60, -281 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes" parent="Obstacles/ColorRect4" instance=ExtResource( 3 )]
position = Vector2( 0.86499, 0.20929 )
rotation = -1.5708

[node name="Spikes2" parent="Obstacles/ColorRect4" instance=ExtResource( 3 )]
position = Vector2( 0.86499, 150.209 )
rotation = -3.14159

[node name="Spikes3" parent="Obstacles/ColorRect4" instance=ExtResource( 3 )]
position = Vector2( 0.86499, 290.209 )
rotation = -3.14159

[node name="Spikes4" parent="Obstacles/ColorRect4" instance=ExtResource( 3 )]
position = Vector2( 0.86499, 440.209 )
rotation = -3.14159

[node name="ColorRect3" type="ColorRect" parent="Obstacles"]
margin_left = 637.73
margin_top = -403.492
margin_right = 782.73
margin_bottom = 393.508
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/ColorRect3"]
position = Vector2( 11.8743, 677.83 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/ColorRect3/StaticBody2D"]
position = Vector2( 60, -281 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes4" parent="Obstacles/ColorRect3" instance=ExtResource( 3 )]
position = Vector2( 144.358, 796.245 )
rotation = 1.5708

[node name="PowerUps" type="Node2D" parent="."]
position = Vector2( 740, 0 )

[node name="Power_Item_Collectible" parent="PowerUps" instance=ExtResource( 5 )]
position = Vector2( 1216.1, 730.424 )
power_name = "Wings"

[node name="Power_Item_Collectible2" parent="PowerUps" instance=ExtResource( 5 )]
modulate = Color( 0.866667, 0.14902, 0.14902, 1 )
position = Vector2( 1533.08, 752.398 )
power_name = "Dash"

[node name="Power_Item_Collectible3" parent="PowerUps" instance=ExtResource( 5 )]
modulate = Color( 0.835294, 0.180392, 0.180392, 1 )
self_modulate = Color( 0.768627, 0.113725, 0.113725, 1 )
position = Vector2( 2375.54, 318.053 )
power_name = "Dash"

[node name="Power_Item_Collectible4" parent="PowerUps" instance=ExtResource( 5 )]
position = Vector2( 3015.23, 1001.44 )
power_name = "Wings"

[node name="Power_Item_Collectible5" parent="PowerUps" instance=ExtResource( 5 )]
modulate = Color( 0.572549, 0, 0.929412, 1 )
position = Vector2( 3474.58, 205.654 )
power_name = "Parachute"

[node name="Power_Item_Collectible6" parent="PowerUps" instance=ExtResource( 5 )]
position = Vector2( 4645.09, 478.483 )
power_name = "Blink"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
limit_right = 6560
limit_bottom = 1080
smoothing_enabled = true
smoothing_speed = 20.0

[node name="Barrier" type="StaticBody2D" parent="Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Barrier"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Barrier2" type="StaticBody2D" parent="Camera2D"]
position = Vector2( 1921, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Barrier2"]
position = Vector2( 25, 541 )
shape = SubResource( 5 )

[node name="Floor" type="Area2D" parent="Camera2D"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Floor"]
position = Vector2( 960, 1242 )
shape = SubResource( 6 )

[node name="Spikewall" type="Node2D" parent="Camera2D"]
position = Vector2( -5, 0 )

[node name="Spikes" parent="Camera2D/Spikewall" instance=ExtResource( 3 )]

[node name="Spikes2" parent="Camera2D/Spikewall" instance=ExtResource( 3 )]
position = Vector2( 0, 150 )

[node name="Spikes3" parent="Camera2D/Spikewall" instance=ExtResource( 3 )]
position = Vector2( 0, 300 )

[node name="Spikes4" parent="Camera2D/Spikewall" instance=ExtResource( 3 )]
position = Vector2( 0, 450 )

[node name="Spikes5" parent="Camera2D/Spikewall" instance=ExtResource( 3 )]
position = Vector2( 0, 590 )

[node name="Spikes6" parent="Camera2D/Spikewall" instance=ExtResource( 3 )]
position = Vector2( 0, 740 )

[node name="Spikes7" parent="Camera2D/Spikewall" instance=ExtResource( 3 )]
position = Vector2( 0, 884 )

[node name="LevelExit" parent="." instance=ExtResource( 6 )]
position = Vector2( 6527.39, 211.223 )
[connection signal="body_entered" from="PowerUps/Power_Item_Collectible" to="." method="_on_Power_Item_Wings_Collectible_body_entered"]
[connection signal="body_entered" from="PowerUps/Power_Item_Collectible2" to="." method="_on_Power_Item_Collectible_body_entered"]
[connection signal="body_entered" from="PowerUps/Power_Item_Collectible3" to="." method="_on_Power_Item_Collectible_body_entered"]
[connection signal="body_entered" from="PowerUps/Power_Item_Collectible4" to="." method="_on_Power_Item_Wings_Collectible_body_entered"]
[connection signal="body_entered" from="PowerUps/Power_Item_Collectible5" to="." method="_on_Power_Item_Parachute_body_entered"]
[connection signal="body_entered" from="PowerUps/Power_Item_Collectible6" to="." method="_on_Power_Item_Blink_body_entered"]
[connection signal="body_exited" from="Camera2D/Floor" to="." method="_on_Floor_body_exited"]
